add a little more ui using popover events

--- a/data/about_passwords.html
+++ b/data/about_passwords.html
@@ -10,6 +10,8 @@
     <link href="css/about_passwords.css" rel="stylesheet"/>
     <script src="js/jquery-1.6.2.min.js" type="application/javascript"></script>
     <script src="js/jquery.tmpl.min.js" type="application/javascript"></script>
+    <script src="js/bootstrap-twipsy.js" type="application/javascript"></script>
+    <script src="js/bootstrap-popover.js" type="application/javascript"></script>
     <script src="js/about_passwords.js" type="application/javascript"></script>
 
     <link rel="shortcut icon" href="images/favicon.ico"/>
@@ -37,7 +39,7 @@
 
     <div class="container">
 
-      <div class="content">
+      <div class="content page">
         <div class="page-header">
           <h1>Your Score: <span id="overall-score"></span> <small>out of 100</small></h1>
           <div class="row">
@@ -90,31 +92,31 @@
         <div class="pull-right flags">
         <div>
         {{if l.unsecure}}
-        <span class="label warning">unsecure</span>
+        <span class="label warning" type="unsecure">unsecure</span>
         {{/if}}
         </div>
         <div>
         {{if l.usedBy.length > 1}}
-        <span class="label important">shared</span>
+        <span class="label important" type="shared" data="${l.usedBy}">shared</span>
         {{/if}}
         </div>
         <div>
         {{if l.similarTo.length > 0}}
-        <span class="label notice">similar</span>
+        <span class="label notice" type="similar" data="${l.similarTo}">similar</span>
         {{/if}}
         </div>
         <div>
         {{if l.age > 90}}
-        <span class="label warning">over 90</span>
+        <span class="label warning" type="over_90">over 90</span>
         {{/if}}
         </div>
         <div>
         {{if l.strength > 80}}
-        <span class="label success">strong ${l.strength}</span>
+        <span class="label success" type="strong_password">strong ${l.strength}</span>
         {{else l.strength > 50}}
-        <span class="label warning">medium ${l.strength}</span>
+        <span class="label warning" type="medium_password">medium ${l.strength}</span>
         {{else}}
-        <span class="label important">weak ${l.strength}</span>
+        <span class="label important" type="weak_password">weak ${l.strength}</span>
         {{/if}}
         </div>
         </div>
