--- a/data/about_passwords.html
+++ b/data/about_passwords.html
@@ -6,6 +6,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
 
+    <!-- we have the css/js here to test via the file uri -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/about_passwords.css" rel="stylesheet"/>
     <script src="js/jquery-1.6.2.min.js" type="application/javascript"></script>
@@ -14,7 +15,7 @@
     <script src="js/bootstrap-popover.js" type="application/javascript"></script>
     <script src="js/about_passwords.js" type="application/javascript"></script>
 
-    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" href="css/security-medium.png"/>
   </head>
 
   <body>
