--- a/data/password_generator.html
+++ b/data/password_generator.html
@@ -1,5 +1,19 @@
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <title>about:passwords</title>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+
+    <!-- we have the css/js here to test via the file uri -->
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="js/jquery-1.6.2.min.js" type="application/javascript"></script>
+    <script src="js/jquery.tmpl.min.js" type="application/javascript"></script>
+    <script src="js/bootstrap-twipsy.js" type="application/javascript"></script>
+    <script src="js/bootstrap-popover.js" type="application/javascript"></script>
+
+    <link rel="shortcut icon" href="css/security-medium.png"/>
 	<style>
 		body {
 			background-color:#ffffff;
@@ -8,8 +22,9 @@
 			color:#000000;
 		}
 	</style>
-</head>
-<body>
+  </head>
+
+  <body>
 	<div>
 		<span id="generatedPassword"></span>
 	</div>
