--- a/data/password_generator.html
+++ b/data/password_generator.html
@@ -2,39 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>about:passwords</title>
+    <title>popup:passwords</title>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
 
     <!-- we have the css/js here to test via the file uri -->
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="js/jquery-1.6.2.min.js" type="application/javascript"></script>
-    <script src="js/jquery.tmpl.min.js" type="application/javascript"></script>
-    <script src="js/bootstrap-twipsy.js" type="application/javascript"></script>
-    <script src="js/bootstrap-popover.js" type="application/javascript"></script>
-
     <link rel="shortcut icon" href="css/security-medium.png"/>
 	<style>
 		body {
-			background-color:#ffffff;
+			background-color: transparent;
+			overflow: hidden;
+			padding: 6px;
+			color: #aaa;
+		}
+		html {
+			overflow: auto;
 		}
 		#generatedPassword {
-			color:#000000;
+			color: black;
+		}
+		h2 {
+			color: #aaa;
 		}
 	</style>
   </head>
 
   <body>
+	<h2>Password Helper</h2>
 	<div>
-		<span id="generatedPassword"></span>
+		<input id="generatedPassword"/> 
 	</div>
 	<div>
-		<div>
-			<input type="submit" value="Generate" id="generateButton"/>
-		</div>
-		<div>
-			<input type="submit" value="Use" id="usePasswordButton"/>
-		</div>
+		Strength: <span id="strength">100</span>
+	</div>
+	<div>
+		<input type="submit" value="Generate" id="generateButton" class="btn"/>
+		<input type="submit" value="Use" id="usePasswordButton" class="btn primary"/>
 	</div>
 </body>
 </html>
