add site popup with details on all accounts for the site

--- a/data/about_passwords.html
+++ b/data/about_passwords.html
@@ -14,6 +14,8 @@
     <script src="js/jquery.stickyscroll.js" type="application/javascript"></script>
     <script src="js/bootstrap-twipsy.js" type="application/javascript"></script>
     <script src="js/bootstrap-popover.js" type="application/javascript"></script>
+    <script src="js/bootstrap-modal.js" type="application/javascript"></script>
+    <script src="js/bootstrap-tabs.js" type="application/javascript"></script>
     <script src="js/about_passwords.js" type="application/javascript"></script>
 
     <link rel="shortcut icon" href="css/security-medium.png"/>
@@ -70,10 +72,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="span9" id="logins-list">
+          <div class="span10" id="logins-list">
           </div>
-          <div class="span5">
-            <div id="login-detail" offsetHeight="100"/>
+          <div class="span4">
+            <div id="login-detail" class="modal hide fade" offsetHeight="100"/>
           </div>
         </div>
       </div>
@@ -87,40 +89,67 @@
 
 <script id="login-entry-tmpl" type="text/x-jquery-tmpl">
     <div class="login-entry">
-        <div><strong><span type="host">${entry.host}</span></strong></div>
-        <div >
-        {{if entry.username}}<span class="label username">${entry.username}</span>{{/if}}
-        <div class="pull-right flags">
-        <div>
-        {{if entry.unsecure}}
-        <span class="label warning" type="unsecure">unsecure</span>
-        {{/if}}
+        <div class="modal-header login-entry-header">
+            <div>
+                <strong><span type="host">${entry.host}</span></strong>
+                <a class="close" href="#">x</a>
+            </div>
+            <div style="clear:both;"/>
         </div>
-        <div>
-        {{if entry.usedBy.length > 1}}
-        <span class="label important" type="shared" data="${entry.usedBy}">shared</span>
-        {{/if}}
-        </div>
-        <div>
-        {{if entry.similarTo.length > 0}}
-        <span class="label notice" type="similar" data="${entry.similarTo}">similar</span>
-        {{/if}}
-        </div>
-        <div>
-        {{if entry.age > 90}}
-        <span class="label warning" type="over_90">over 90</span>
-        {{/if}}
-        </div>
-        <div>
-        {{if entry.strength > 80}}
-        <span class="label success" type="strong_password">strong ${entry.strength}</span>
-        {{else entry.strength > 50}}
-        <span class="label warning" type="medium_password">medium ${entry.strength}</span>
-        {{else}}
-        <span class="label important" type="weak_password">weak ${entry.strength}</span>
-        {{/if}}
-        </div>
-        </div>
+        <div  class="modal-body">
+            <ul class="tabs">
+                {{each( i, l ) accounts}}
+                {{if l.active}}<li class="active">{{else}}<li>{{/if}}
+                <a href="#${i}">${l.username}</a></li>
+                {{/each}}
+            </ul>
+            <div class="pill-content">
+            {{each( i, l ) accounts}}
+                {{if l.active}}
+                <div id="${i}" class="active">
+                {{else}}
+                <div id="${i}">
+                {{/if}}
+                    {{if l.unsecure}}
+                        <span class="label warning" type="unsecure">unsecure</span>
+                        <div>This site uses an unsecured connection which could put your account at risk.</div>
+                    {{/if}}
+                    {{if l.usedBy.length > 1}}
+                    <span class="label important" type="shared" data="${l.usedBy}">shared</span>
+                        <div>
+                        <strong>This site shares a password with ${l.usedBy.length} other sites.</strong>
+                        Sharing passwords between unrelated sites puts all the sites at risk.
+                        {{if l.hasUnsecure}}
+                        Additionally, <strong>one or more of those sites uses this password over an
+                        unsecured connection</strong>, raising your risk even further.
+                        {{/if}}
+                        </div>
+                    {{/if}}
+                        {{if l.similarTo.length > 0}}
+                        <span class="label notice" type="similar" data="${l.similarTo}">similar</span>
+                        <div>
+                        <strong>This sites password is similar to ${l.similarTo.length} other sites.</strong>
+                        </div>
+                        {{/if}}
+                    {{if l.age > 90}}
+                        <span class="label warning" type="over_90">over 90</span>
+                    {{/if}}
+                    {{if l.strength > 80}}
+                        <span class="label success" type="strong_password">strong ${l.strength}</span>
+                        <div>Your password is good.</div>
+                    {{else l.strength > 50}}
+                        <span class="label warning" type="medium_password">medium ${l.strength}</span>
+                        <div>Your password could be stronger, consider changing it.</div>
+                    {{else}}
+                        <span class="label important" type="weak_password">weak ${l.strength}</span>
+                        <div>Your password is at risk, consider changing it.</div>
+                    {{/if}}
+                </div>
+            {{/each}}
+            </div><!-- pill-content -->
+        </div><!-- modal-body -->
+        <div class="modal-footer">
+        <a href="#">account settings</a>
         </div>
     </div>
 </script>
@@ -132,27 +161,18 @@
         <div >
         {{if l.username}}<span class="label username">${l.username}</span>{{/if}}
         <div class="pull-right flags">
-        <div>
         {{if l.unsecure}}
         <span class="label warning" type="unsecure">unsecure</span>
         {{/if}}
-        </div>
-        <div>
         {{if l.usedBy.length > 1}}
         <span class="label important" type="shared" data="${l.usedBy}">shared</span>
         {{/if}}
-        </div>
-        <div>
         {{if l.similarTo.length > 0}}
         <span class="label notice" type="similar" data="${l.similarTo}">similar</span>
         {{/if}}
-        </div>
-        <div>
         {{if l.age > 90}}
         <span class="label warning" type="over_90">over 90</span>
         {{/if}}
-        </div>
-        <div>
         {{if l.strength > 80}}
         <span class="label success" type="strong_password">strong ${l.strength}</span>
         {{else l.strength > 50}}
@@ -160,7 +180,6 @@
         {{else}}
         <span class="label important" type="weak_password">weak ${l.strength}</span>
         {{/if}}
-        </div>
         </div>
         </div>
     </div>
