add a model panel for showing a single domain make use of the hashtag for showing a domain on open of about:passwords

--- a/data/about_passwords.html
+++ b/data/about_passwords.html
@@ -11,7 +11,7 @@
     <link href="css/about_passwords.css" rel="stylesheet"/>
     <script src="js/jquery-1.6.2.min.js" type="application/javascript"></script>
     <script src="js/jquery.tmpl.min.js" type="application/javascript"></script>
-    <script src="js/jquery.stickyscroll.js" type="application/javascript"></script>
+    <script src="js/jquery.ba-hashchange.min.js" type="application/javascript"></script>
     <script src="js/bootstrap-twipsy.js" type="application/javascript"></script>
     <script src="js/bootstrap-popover.js" type="application/javascript"></script>
     <script src="js/bootstrap-modal.js" type="application/javascript"></script>
