update jquery and bootstrap

--- a/data/password_generator.html
+++ b/data/password_generator.html
@@ -14,16 +14,9 @@
 			background-color: transparent;
 			overflow: hidden;
 			padding: 6px;
-			color: #aaa;
 		}
 		html {
 			overflow: auto;
-		}
-		#generatedPassword {
-			color: black;
-		}
-		h2 {
-			color: #aaa;
 		}
 	</style>
   </head>
@@ -31,14 +24,14 @@
   <body>
 	<h2>Password Helper</h2>
 	<div>
-		<input id="generatedPassword"/> 
+		<input id="generatedPassword"/> <input id="punctuation" type="checkbox" checked="checked">Use punctuation</input>
 	</div>
 	<div>
 		Strength: <span id="strength">100</span>
 	</div>
 	<div>
-		<input type="submit" value="Generate" id="generateButton" class="btn"/>
-		<input type="submit" value="Use" id="usePasswordButton" class="btn primary"/>
+		<input type="submit" value="Generate" id="generateButton" class="btn btn-default"/>
+		<input type="submit" value="Use" id="usePasswordButton" class="btn btn-primary"/>
 	</div>
 </body>
 </html>
